home-assistant/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  hosts:
    - "ha.lag0.com.br"
  gateways:
    - istio-system/lag0-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: home-assistant
            port:
              number: 8123
